# bazel-kotlin-kapt-ij-bugreport

./: BUILD.bazel  MODULE.bazel
src/main/kotlin/com/github/ekohlwey/: BugExample.kt
